--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,7 +8,4 @@ workflows:
       - echo "Starting iOS build..."
       - gem install cocoapods
       - pod install
-    build:
-      xcode_project: "App/PersonalAssistantApp.xcodeproj"
-      xcode_scheme: "PersonalAssistantApp"
-      export_method: "app-store"
+      - xcodebuild -project App/PersonalAssistantApp.xcodeproj -scheme PersonalAssistantApp -sdk iphoneos -configuration AppStoreDistribution clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
