--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,7 +6,6 @@ workflows:
         OPENAI_API_KEY: $OPENAI_API_KEY
     scripts:
       - echo "Starting iOS build..."
-      - gem install bundler
-      - bundle install
+      - gem install cocoapods
       - pod install --project-directory=App
       - xcodebuild -project App/PersonalAssistantApp.xcodeproj -scheme PersonalAssistantApp -sdk iphoneos -configuration Release clean build
