--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,6 +7,5 @@ workflows:
     scripts:
       - echo "Starting iOS build..."
       - gem install cocoapods
-      - pod cache clean --all
-      - pod install --repo-update
-      - xcodebuild -project App/PersonalAssistantApp.xcodeproj -scheme PersonalAssistantApp -sdk iphoneos -configuration Release clean build
+      - pod install
+      - xcodebuild -project PersonalAssistantApp.xcodeproj -scheme PersonalAssistantApp -sdk iphoneos -configuration Release clean build
